# MoreModbus

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  COPYRIGHT  Doxyfile  LICENSE  LicenceHeader  README.md  RELEASE_NOTES.txt  configure.sh  coverage.sh
.github/workflows/: cmake_build_and_test.yml
cmake/: clang-format.cmake
dependencies/: CMakeLists.txt  make.sh
docs/: BoolMapping_8h_source.html  ConsoleLogger_8h_source.html  DataParsers_8h_source.html  Deserializers_8h_source.html  FloatMapping_8h_source.html  Int16Mapping_8h_source.html  Int32Mapping_8h_source.html  LibModbusSerialRtuClient_8h_source.html  LibModbusTcpIpClient_8h_source.html  Logger_8h_source.html  ModbusClient_8h_source.html  ModbusDevice_8h_source.html  ModbusGroupReader_8h_source.html  ModbusReader_8h_source.html  RegisterGroup_8h_source.html  RegisterMapping_8h_source.html  StringMapping_8h_source.html  UInt16Mapping_8h_source.html  UInt32Mapping_8h_source.html  annotated.html  annotated_dup.js  classes.html  classwolkabout_1_1BoolMapping-members.html  classwolkabout_1_1BoolMapping.html  classwolkabout_1_1BoolMapping.js  classwolkabout_1_1ConsoleLogger-members.html  classwolkabout_1_1ConsoleLogger.html  classwolkabout_1_1ConsoleLogger.js  classwolkabout_1_1DataParsers-members.html  classwolkabout_1_1DataParsers.html  classwolkabout_1_1DataParsers.js  classwolkabout_1_1Deserializers-members.html  classwolkabout_1_1Deserializers.html  classwolkabout_1_1FloatMapping-members.html  classwolkabout_1_1FloatMapping.html  classwolkabout_1_1FloatMapping.js  classwolkabout_1_1Int16Mapping-members.html  classwolkabout_1_1Int16Mapping.html  classwolkabout_1_1Int16Mapping.js  classwolkabout_1_1Int32Mapping-members.html  (+97 more)
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  (+8 more)
docs/theme/: custom.css
example/: Application.cpp
more_modbus/: ModbusDevice.cpp  ModbusDevice.h  ModbusReader.cpp  ModbusReader.h  RegisterGroup.cpp  RegisterGroup.h  RegisterMapping.cpp  RegisterMapping.h
more_modbus/mappings/: BoolMapping.cpp  BoolMapping.h  FloatMapping.cpp  FloatMapping.h  Int16Mapping.cpp  Int16Mapping.h  Int32Mapping.cpp  Int32Mapping.h  StringMapping.cpp  StringMapping.h  UInt16Mapping.cpp  UInt16Mapping.h  UInt32Mapping.cpp  UInt32Mapping.h
more_modbus/modbus/: LibModbusSerialRtuClient.cpp  LibModbusSerialRtuClient.h  LibModbusTcpIpClient.cpp  LibModbusTcpIpClient.h  ModbusClient.cpp  ModbusClient.h  ModbusGroupReader.cpp  ModbusGroupReader.h  ModbusMappingReader.cpp  ModbusMappingReader.h
more_modbus/utilities/: DataParsers.cpp  DataParsers.h  Deserializers.cpp  Deserializers.h
src/: Group.cpp  Group.h  Mapping.cpp  Mapping.h  ModbusDevice.cpp  ModbusDevice.h  ModbusReader.cpp  ModbusReader.h  RegisterGroup.cpp  RegisterGroup.h  RegisterMapping.cpp  RegisterMapping.h  WolkaboutRegisterGroup.cpp  WolkaboutRegisterGroup.h  WolkaboutRegisterMapping.cpp  WolkaboutRegisterMapping.h  library.h
src/mappings/: BoolMapping.cpp  BoolMapping.h  FloatMapping.cpp  FloatMapping.h  Int16Mapping.cpp  Int16Mapping.h  Int32Mapping.cpp  Int32Mapping.h  StringMapping.cpp  StringMapping.h  UInt16Mapping.cpp  UInt16Mapping.h  UInt32Mapping.cpp  UInt32Mapping.h
src/modbus/: LibModbusSerialRtuClient.cpp  LibModbusSerialRtuClient.h  LibModbusTcpIpClient.cpp  LibModbusTcpIpClient.h  ModbusClient.cpp  ModbusClient.h  ModbusGroupReader.cpp  ModbusGroupReader.h  ModbusReader.cpp  ModbusReader.h
src/modbus/libmodbus/: modbus-private.h  modbus.h
src/utilities/: ConsoleLogger.cpp  ConsoleLogger.h  DataParsers.cpp  DataParsers.h  Deserializers.cpp  Deserializers.h  Logger.cpp  Logger.h
src/utility/: ConsoleLogger.cpp  ConsoleLogger.h  DataParsers.cpp  DataParsers.h  Logger.cpp  Logger.h  json.hpp
tests/: ComplexMappingsTests.cpp  DataParsersTest.cpp  DeserializersTest.cpp  MappingsTests.cpp  ModbusClientTests.cpp  ModbusDeviceTests.cpp  ModbusReaderTests.cpp  ModbusSerialRTUClientTest.cpp  ModbusTCPClientTest.cpp  ProperReadingTest.cpp  RegisterGroupTests.cpp  RegisterMappingTests.cpp
tests/mocks/: LibModbusMocking.h  ModbusClientMock.h  ModbusClientMocking.h  ModbusDeviceMocking.h  ModbusReaderMocking.h  RegisterGroupMocking.h  RegisterMappingMocking.h
tools/: coverage.sh
tools/git/: pre-commit
